--- a/_posts/2015-11-18-seance-7.markdown
+++ b/_posts/2015-11-18-seance-7.markdown
@@ -4,7 +4,16 @@ title:  "Séance 7 | Ethernet avec Smews"
 date:   2015-11-18 14:00:00
 categories: pje seance smews 
 ---
-* Découverte de l'application board  [Application Board][board]
+Pour rappel, le lien de [Smews][smews-gh]
+* Découverte de l'[application board][board].
 * Tentative d'interaction avec l'accelerometre 
 
+
+La ligne de commande utilisée ici est : scons target=mbed_ethernet apps=:welcome ipaddr=192.168.1.3
+Pour accéder à la page avec l'interface de la salle réseau, on a besoin d'établir une route :
+sudo ip link set eth1 up
+sudo ip addr add 192.168.1.2 dev eth1
+sudo ip route add 192.168.1.3 via 192.168.1.2 dev eth1
+
 [board]: 	https://developer.mbed.org/cookbook/mbed-application-board
+[smews-gh]: 	https://github.com/2xs/smews
