--- a/_posts/2015-11-18-seance-7.markdown
+++ b/_posts/2015-11-18-seance-7.markdown
@@ -7,7 +7,17 @@ categories: pje seance smews
 * Pour rappel, le lien de [Smews][smews-gh]
 * Découverte de l'[application board][board].
 * Tentative d'interaction avec l'accelerometre 
-
+* Pages dynamiques en C, d'abord sans arguments, puis avec :
+* static char output_args(struct args_t *args){
+*	if(args){
+*		out_str("first int : ");
+*		out_uint(args->i1);
+*		out_uint(args->i2);
+*	} else {
+*		out_str("no args");
+*	}
+*	return 1;
+* }
 
 * La ligne de commande utilisée ici est : scons target=mbed_ethernet apps=:welcome ipaddr=192.168.1.3
 * Pour accéder à la page avec l'interface de la salle réseau, on a besoin d'établir une route :
