--- a/_posts/2015-11-18-seance-7.markdown
+++ b/_posts/2015-11-18-seance-7.markdown
@@ -7,7 +7,8 @@ categories: pje seance smews
 * Pour rappel, le lien de [Smews][smews-gh]
 * Découverte de l'[application board][board].
 * Tentative d'interaction avec l'accelerometre 
-* Pages dynamiques en C, d'abord sans arguments, puis avec :
+* Pages dynamiques en C, d'abord sans arguments, puis avec : 
+```C
     static char output_args(struct args_t *args){
 	if(args){
 		out_str("first int : ");
@@ -18,12 +19,17 @@ categories: pje seance smews
 	}
 	return 1;
     }
-
-* La ligne de commande utilisée ici est : scons target=mbed_ethernet apps=:welcome ipaddr=192.168.1.3
+```
+* La ligne de commande utilisée ici est : 
+```bash
+scons target=mbed_ethernet apps=:welcome ipaddr=192.168.1.3
+```
 * Pour accéder à la page avec l'interface de la salle réseau, on a besoin d'établir une route :
+```bash
 	sudo ip link set eth1 up
 	sudo ip addr add 192.168.1.2 dev eth1
 	sudo ip route add 192.168.1.3 via 192.168.1.2 dev eth1
+```
 
 [board]: 	https://developer.mbed.org/cookbook/mbed-application-board
 [smews-gh]: 	https://github.com/2xs/smews
