--- a/_posts/2015-11-25-seance-8.markdown
+++ b/_posts/2015-11-25-seance-8.markdown
@@ -8,12 +8,19 @@ categories: pje seance smews
 * Utilisation (essai) de la [matrice de leds][led_matrix].
 
 * Utils :
-* Pour configurer le git de la fac : git config --global http.proxy http://cache-etu.univ-lille1.fr:3128
-* La ligne de commande utilisée ici est : scons target=mbed_ethernet apps=:welcome ipaddr=192.168.1.3
+* Pour configurer le git de la fac : 
+```bash
+	git config --global http.proxy http://cache-etu.univ-lille1.fr:3128
+```
+* La ligne de commande utilisée ici est :  
+```bash
+	scons target=mbed_ethernet apps=:welcome ipaddr=192.168.1.3
+```
 * Pour accéder à la page avec l'interface de la salle réseau, on a besoin d'établir une route :
+```bash
 	sudo ip link set eth1 up
 	sudo ip addr add 192.168.1.2 dev eth1
 	sudo ip route add 192.168.1.3 via 192.168.1.2 dev eth1
-
+```
 [led_matrix]: 	https://github.com/sparkfun/LED_Matrix_Serial_Interface_RGB
 [smews-gh]: 	https://github.com/2xs/smews
