--- a/_posts/2015-12-02-seance-9.markdown
+++ b/_posts/2015-12-02-seance-9.markdown
@@ -7,6 +7,7 @@ categories: pje seance smews udp
 * Pour rappel, le lien de [Smews][smews-gh]
 * Projet : Lister les mbeds présents sur le réseau ( branchés sur un switch pour le moment, si possible plus tard, pourquoi pas utiliser le module xbee ? ) et les applications disponibles sur ces mbeds, avec un lien vers l'adresse IP directe des mbeds et des applis.
 * Technologies à utiliser : Paquets UDP avec Smews.
+* Interaction avec le binôme d'Axel LHEUREUX et Yao YUAN
 
 
 
