--- a/_posts/2015-12-09-seance-10.markdown
+++ b/_posts/2015-12-09-seance-10.markdown
@@ -6,8 +6,7 @@ categories: pje seance smews udp
 ---
 * Pour rappel, le lien de [Smews][smews-gh]
 * Projet : Lister les mbeds présents sur le réseau ( branchés sur un switch pour le moment, si possible plus tard, pourquoi pas utiliser le module xbee ? ) et les applications disponibles sur ces mbeds, avec un lien vers l'adresse IP directe des mbeds et des applis.
-* Technologies à utiliser : Paquets UDP avec Smews.
-* Interaction avec le binôme d'Axel LHEUREUX et Yao YUAN
+* De grosses difficultés à utiliser UDP avec Smews, nous n'arrivons à rien à part répondre à un echo via netcat.
 
 
 
