--- a/_posts/2015-12-16-seance-11.markdown
+++ b/_posts/2015-12-16-seance-11.markdown
@@ -5,12 +5,9 @@ date:   2015-12-16 14:00:03
 categories: pje seance smews udp
 ---
 * Pour rappel, le lien de [Smews][smews-gh]
-* Projet : Lister les mbeds présents sur le réseau ( branchés sur un switch pour le moment, si possible plus tard, pourquoi pas utiliser le module xbee ? ) et les applications disponibles sur ces mbeds, avec un lien vers l'adresse IP directe des mbeds et des applis.
-* Technologies à utiliser : Paquets UDP avec Smews.
-* Interaction avec le binôme d'Axel LHEUREUX et Yao YUAN
-* Quelques soucis pour l'instant à faire fonctionner le réseau
+* Une idée : D'abord envoyer un paquet via javascript côté utilisateur (Du genre, un bouton "Scan" qui envoie le paquet UDP), le mbed renverrait un paquet sur le broadcast avec un message "src:<ip_mbed>", les autres mbed renverraient un paquet vers <ip_mbed> avec en message la liste de leurs applis avec l'url.
 
 
 
 
-[smews-gh]: 	https://github.com/2xs/smews
+[smews-gh]: 	https://github.com/SquierDotQn/smews
