--- a/_posts/2016-01-01-utils.markdown
+++ b/_posts/2016-01-01-utils.markdown
@@ -29,4 +29,4 @@ categories: pje utils
 
 [pins]:     	https://developer.mbed.org/users/screamer/code/mbed/file/667d61c9177b/PinNames.h
 [rflpc-gh]:   	https://github.com/hauspie/rflpc
-[smews-gh]: 	https://github.com/2xs/smews
+[smews-gh]: 	https://github.com/SquierDotQn/smews
